# FlintLauncher-windows

./: Cargo.toml  LICENSE  README.md  build-release.bat  install.bat  run.bat  start.bat  uninstall.bat
src/: main.rs
