[package]
name = "FlintLauncher-windows"
version = "1.0.0"
edition = "2021"

[dependencies]
eframe = "0.27.2"
egui = "0.27.2"
fuzzy-matcher = "0.3.7"
rayon = "1.8.0"
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
urlencoding = "2.1.3"
meval = "0.2.0"
emojis = "0.8.0"
dirs = "4.0.0"
tray-item = "0.7.0"